# evolution-engine

./: .gitignore  README.md  README.zh.md  pyproject.toml  test-prd.md
examples/: .env.example  evolution.yml
examples/dashboard/: metrics.json  openclaw_config_hint.json  tunable_hint.json
examples/prompts/: actor_system.md
examples/scripts/: status.sh
prompts/: judge_system.md
src/: actor.py  cli.py  config_loader.py  github_client.py  hard_stops.py  history.py  judge.py  llm.py  observer.py  router.py
tests/: setup_it001.sh  test_prd_11.py  test_v1.py
